--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -17,6 +17,7 @@ $icon-font-path: '/assets/fonts/';
 @import "../../sections/login/_login.scss";
 @import "../../sections/recover/_recover.scss";
 @import "../../sections/home/_home.scss";
+@import "../../sections/inicio/inicio.scss";
 @import "../../sections/noticias/_noticias.scss";
 @import "../../sections/nosotros/_nosotros.scss";
 @import "../../sections/cafeteria/_cafeteria.scss";
